<resources>
<!--    name app-->
    <string name="app_name">Movie Fan</string>

<!--    top main bar setting and bottom main bar menu-->
    <string name="main_menu_home">Мой MF</string>
    <string name="main_menu_favorites">Избранное</string>
    <string name="main_menu_my_selections">Каталог</string>
    <string name="main_menu_profile">Профиль</string>
    <string name="main_menu_settings">Настройки</string>

<!--    description for cards image-->
    <string name="top_bar_image4">фильм 4</string>
    <string name="top_bar_image3">фильм 3</string>
    <string name="top_bar_image2">фильм 2</string>
    <string name="poster_film">постер фильма</string>
    <string name="title_film">название фильма</string>
    <string name="rating_film">рейтинг</string>
    <string name="description_film">описание фильма</string>


<!--    alert dialog -->
    <string name="exit_dialog_title">Выход</string>
    <string name="exit_dialog_message">Вы действительно хотите выйти?</string>
    <string name="exit_dialog_yes">Да</string>
    <string name="exit_dialog_no">Нет</string>

</resources>