<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/main_menu_home"
        android:title="@string/main_menu_home"
        android:icon="@drawable/ic_round_home_24"
        android:enabled="true"/>

    <item android:id="@+id/main_menu_favorites"
        android:title="@string/main_menu_favorites"
        android:icon="@drawable/ic_round_favorite_24"
        android:enabled="true"/>

    <item android:id="@+id/main_menu_home_my_selections"
        android:title="@string/main_menu_my_selections"
        android:icon="@drawable/ic_baseline_search_24"
        android:enabled="true"/>

    <item android:id="@+id/main_menu_profile"
        android:title="@string/main_menu_profile"
        android:icon="@drawable/ic_round_rpofile_24"
        android:enabled="true"/>

</menu>