<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:id="@+id/poster_card"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_film_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/poster_film"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/poster_film"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars"  />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/rating_film"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rating_film"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_film_1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster_card"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/year_film"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/year_film"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_film_1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating_film"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_film_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="150dp" />

        <TextView
            android:id="@+id/title_film"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_film"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline_film_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/description_film"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description_film"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline_film_1"
            app:layout_constraintTop_toBottomOf="@+id/title_film"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>