<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivi_blue_dark"
    tools:context=".ui.home.HomeFragment">

    <!-- Regular top app bar tools-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/home_topBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/home_topBar_for_cards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/home_menu_top_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/setting_menu_main_top_bar"
            app:navigationIcon="@drawable/ic_round_menu_24"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>
    <!-- Regular top app bar tools-->

    <!-- Cards for image movies-->
    <LinearLayout
        android:id="@+id/home_topBar_for_cards"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:background="@color/ivi_blue"
        android:layoutAnimation="@anim/cards_spawn_layout_animation"
        app:layout_constraintBottom_toTopOf="@+id/home_recycler_catalog_film"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_topBar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:stateListAnimator="@animator/cards_pressed_animator"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/poster_film"
                android:scaleType="centerCrop"
                android:src="@drawable/image1" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:stateListAnimator="@animator/cards_pressed_animator"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/image2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/top_bar_image2"
                android:scaleType="centerCrop"
                android:src="@drawable/image2" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:stateListAnimator="@animator/cards_pressed_animator"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/image3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/top_bar_image3"
                android:scaleType="centerCrop"
                android:src="@drawable/image3" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card4"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:stateListAnimator="@animator/cards_pressed_animator"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/image4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/top_bar_image4"
                android:scaleType="centerCrop"
                android:src="@drawable/image4" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <!-- Cards for image movies-->

    <!--    RecyclerView layout-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_recycler_catalog_film"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_topBar_for_cards"
        tools:listitem="@layout/item_film" />

</androidx.constraintlayout.widget.ConstraintLayout>